--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2460,3 +2460,10 @@ header .form-inline {
         .right-panel .content #bootstrap-data-table_wrapper .table td,
         .right-panel .content #bootstrap-data-table_wrapper .table th {
           padding: 5px; } }
+
+          /*By shidory*/
+          .btn{
+            position: absolute;
+            top: 50%;
+            color:red;
+          }
